@@ -4,6 +4,10 @@ o issue #16: Fixed log file switching for temporary Transactions
 Sep 25, 2012 - chris ---------------------------------------------------
 o Fixed recovery process for temporary Transactions
 
+Aug 01, 2012 - chris ---------------------------------------------------
+o (dotnet) Fixed invalid memory access when using Parameter[] in
+        env.CreateDatabase or env.OpenDatabase (Thanks, Jason)
+
 Jul 23, 2012 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.4
 
